--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,3 +10,4 @@ services:
     environment:
       - SET_IPTABLES_DEV=eth0
       - SET_IPTABLES_PROXY_PORT=3128
+      - SET_IPTABLES_PORTS=80 443
